# mt-miner

./: .gitignore  Dockerfile  MT-Miner.sln  mt miner doc.docx  readme.md
MT-Miner/: BinaryRepresentation.cpp  BinaryRepresentation.h  Bitset.cpp  Bitset.h  CMakeLists.txt  FormalContext.h  Graph.cpp  Graph.h  HeapItemset.cpp  HeapItemset.h  Hyp1.txt  Hyp3.txt  HyperGraph.h  HypergraphParser.cpp  HypergraphParser.h  Item.cpp  Item.h  Item.h.bak  Itemset.cpp  Itemset.cpp.bak  Itemset.h  Itemset.h.bak  JsonTree.cpp  JsonTree.h  JsonTreeNode.h  Logger.cpp  Logger.h  MT-Miner.cpp  MT-Miner.vcxproj  MT-Miner.vcxproj.filters  MT_Miner.cpp  MT_Miner.h  MaxCliqueItemset.cpp  MaxCliqueItemset.h  Profiler.cpp  Profiler.h  SparseBitset.h  TM_Hyp1.txt  TM_Hyp3.txt  ToExploreItemset.h  (+15 more)
MT-Miner-UnitTests/: MT-Miner-UnitTests.vcxproj  MT-Miner-UnitTests.vcxproj.filters  MT-Miner-UnitTests_ac_clone.cpp  MT-Miner-UnitTests_ac_no_clone.cpp  MT-Miner-UnitTests_hyp_clone.cpp  MT-Miner-UnitTests_hyp_no_clone.cpp  MT-Miner-UnitTests_test.cpp  MT-Minter-UnitTests_Bitset_benchmark.cpp  MT-Minter-UnitTests_CustomBitset.cpp  MT-Minter-UnitTests_SparseBitset.cpp  MT-Minter-UnitTests_StaticBitset.cpp  MT-Minter-UnitTests_VarianBitset.cpp  MT-Minter-UnitTests_bitset.cpp  pch.h
MT-Miner/New folder/: Item.h  Itemset.cpp  Itemset.h  MT_Miner.cpp  MT_Miner.h  ToExploreItemset.cpp  TreeNode.cpp  TreeNode.h
MT-Miner/build990/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mt_miner.sln  mt_miner.vcxproj  mt_miner.vcxproj.filters
MT-Miner/front-end/: index.html  styles.css  tree-data.json  tree-data_200k_clones.json  tree-data_ac_130k.json  tree-data_ac_130k_clones.json  tree-data_ac_150k.json  tree-data_ac_200k.json  tree.js
Minimal-Hitting-Set-Algorithms/: agdmhs-test
data/: Hyp2.txt  Hypergraph-modif.txt  Junction_7_10_alpha=10.txt  Junction_8_10.txt  Mt_Miner.docx  TM_Hyp1.txt  TM_Hyp2.txt  ac_130k-out.txt  ac_150-out.txt  ac_150-out2.txt  ac_200k-out.txt  finalhypergraph.txt  generated.txt  generated_50_20clones.txt  generator.py  simple.txt  test.txt  test_clone.txt  toto.txt
dual/: basic.cpp  basic.h  box.cpp  box.h  dual.cpp  dual.vcxproj  dual.vcxproj.filters  ffssd.out  stack.cpp  stack.h  vector.cpp  vector.h
dual_original/: CMakeLists.txt  basic.c  basic.h  c1.p  c1.p.out  data1.txt  data1.txt.out  data2.txt  dual.cpp  stack.c  stack.h  vector.c  vector.h
frontend/: styles.css  tree-data.json  tree.js
hypergraphGenerator/: generated.txt  generator.py
scripts/: New Microsoft Excel Worksheet.xlsx  compil.py  disj_miner.csv  disj_miner_old.csv  launch.py  load_stats.py  log.txt  log2.xls.xlsx  miner_log_all.csv  shd_log_file (version 1).csv  shd_log_file (version 1).xlsx  shd_log_file.csv  split_hypergraph.py  tmp_log.txt  transactional2binary.py
scripts/split_ac_130k/: small_file_100  small_file_1000  small_file_150  small_file_200  small_file_250  small_file_300  small_file_350  small_file_400  small_file_450  small_file_50  small_file_500  small_file_550  small_file_600  small_file_650  small_file_700  small_file_750  small_file_800  small_file_850  small_file_900  small_file_950
shd/: aheap.c  aheap.h  problem.h  queue.h  shd.vcxproj  shd.vcxproj.filters  stdlib2.c  stdlib2.h
shd_/: itemset.c  itemset.h  problem.c  queue.c  shd.c
tpool/: tpool.cpp  tpool.vcxproj  tpool.vcxproj.filters
